+ #59 (Autofac)(New) Added LightBDD.Autofac integration for Autofac DI container
+ #67 (Fixie)(New) Added LightBdd.Fixie2 integration project with https://github.com/fixie/fixie
+ #70 (all)(New) Added Table<TRow> and VerifiableTable<TRow> to represent tabular step method parameters
+ #117 (XUnit2)(New) Added experimental ClassCollectionBehavior attribute allowing inter-class test parallelization

Version 2.3.6
----------------------------------------
Summary:
+ #108 (Core)(Change) Allowed IStepDecoratorAttribute and IScenarioDecoratorAttribute to be applied on class level

Version 2.3.5
----------------------------------------
Summary:
+ #104 LightBDD does not recognize xunit Category traits
Details:
+ #104 (XUnit2)(Change) Updated LightBDD.XUnit2 integration to recognize [Trait("Category", "...")] as scenario category

Version 2.3.4
----------------------------------------
Summary:
+ #34 Implemented console immediate progress notification for LightBDD.NUnit3
+ #34 Enhanced scenario progress notification
+ #98 Lifted requirement for parameterized constructors in LightBDD.XUnit2 FeatureFixture
Details:
+ #34 (NUnit3)(New) Implemented immediate progress notification when executed with `dotnet test` or `nunit3-console.exe`
+ #34 (XUnit2)(Change) Simplified scenario summary printed in VisualStudio Test Explorer output / Resharper output and console output for LightBDD.XUnit2
+ #34 (Framework)(New) Added ClearNotifiers() / AppendNotifiers() methods to FeatureProgressNotifierConfiguration in order to simplify combining different notifiers
+ #34 (Framework)(New) Added ClearNotifierProviders() / AppendNotifierProviders() methods to ScenarioProgressNotifierConfiguration in order to simplify combining different notifiers
+ #34 (all integrations)(New) Added AppendFrameworkDefaultProgressNotifiers() extensions to FeatureProgressNotifierConfiguration and ScenarioProgressNotifierConfiguration to allow re-applying integration specific notifiers after they has been cleared