@@ -1,7 +1,10 @@
 ﻿using System;
 using System.Linq;
+using System.Threading.Tasks;
 using LightBDD.Core.Configuration;
+using LightBDD.Core.Execution;
 using LightBDD.Core.Extensibility;
+using LightBDD.Core.Extensibility.Execution;
 using LightBDD.Framework.Commenting;
 using LightBDD.Framework.Commenting.Configuration;
 using LightBDD.Framework.ExecutionContext.Configuration;
@@ -75,6 +78,18 @@ namespace LightBDD.Framework.UnitTests.Commenting
             Assert.That(steps[1].Comments.ToArray(), Is.EqualTo(new[] { nameof(Commented_step2) }));
         }
 
+        [Test]
+        public void Comment_executed_from_step_decorator_should_be_properly_applied()
+        {
+            var feature = GetFeatureRunner();
+            var runner = feature.GetBddRunner(this);
+
+            runner.Test().TestGroupScenario(Decorated_grouped_steps);
+            var mainStep = feature.GetFeatureResult().GetScenarios().Single().GetSteps().Single();
+            Assert.That(mainStep.Comments.ToArray(), Is.EqualTo(new[] { "Start: Decorated grouped steps", "End: Decorated grouped steps" }));
+            Assert.That(mainStep.GetSubSteps().Single().Comments.ToArray(), Is.EqualTo(new[] { "Start: Decorated step", "End: Decorated step" }));
+        }
+
         private TestCompositeStep Grouped_steps()
         {
             return TestCompositeStep.Create(
@@ -82,8 +97,16 @@ namespace LightBDD.Framework.UnitTests.Commenting
                 Commented_step2);
         }
 
-        private static void Commented_step1(){StepExecution.Current.Comment(nameof(Commented_step1));}
-        private static void Commented_step2(){StepExecution.Current.Comment(nameof(Commented_step2));}
+        [CommentingDecorator]
+        private TestCompositeStep Decorated_grouped_steps()
+        {
+            return TestCompositeStep.Create(Decorated_step);
+        }
+
+        [CommentingDecorator]
+        private static void Decorated_step() { }
+        private static void Commented_step1() { StepExecution.Current.Comment(nameof(Commented_step1)); }
+        private static void Commented_step2() { StepExecution.Current.Comment(nameof(Commented_step2)); }
 
         private static void Commented_step(string comment)
         {
@@ -97,6 +120,24 @@ namespace LightBDD.Framework.UnitTests.Commenting
                 .WithConfiguration(cfg => cfg.ExecutionExtensionsConfiguration().EnableStepCommenting());
 
             return new TestableFeatureRunnerRepository(context).GetRunnerFor(GetType());
+        }
+
+        private class CommentingDecoratorAttribute : Attribute, IStepDecoratorAttribute
+        {
+            public async Task ExecuteAsync(IStep step, Func<Task> stepInvocation)
+            {
+                StepExecution.Current.Comment("Start: " + step.Info.Name.ToString());
+                try
+                {
+                    await stepInvocation();
+                }
+                finally
+                {
+                    StepExecution.Current.Comment("End: " + step.Info.Name.ToString());
+                }
+            }
+
+            public int Order { get; }
         }
     }
 }
