@@ -11,6 +11,7 @@ Summary:
 + #67 (Fixie)(New) Added LightBdd.Fixie2 integration project with https://github.com/fixie/fixie
 + #70 (all)(New) Added Table<TRow> and VerifiableTable<TRow> to represent tabular step method parameters
 + #117 (XUnit2)(New) Added experimental ClassCollectionBehavior attribute allowing inter-class test parallelization
++ #120 (Framework)(Fix) StepExecution.Current.Comment() does not work after leaving sub-step in composite step
 
 Version 2.3.6
 ----------------------------------------
